ShowEvents and middleware
