# src/helpers/validator.ts
@@ -1,4 +1,6 @@
 import _ from "lodash"
+import { IEventfilter } from "../interfaces"
+import moment from "moment"
 
 
 export const validateString = (str: any): str is string => {
@@ -11,4 +13,31 @@ export const validatePassword = (pass: any): pass is string => {
 
 export const validateBoolean = (bl: any): bl is boolean => {
     return _.isBoolean(bl)
+}
+
+export const validateEventFilter = (filter?: IEventfilter): filter is IEventfilter => {
+    let isValid: boolean = true;
+
+    if (!filter) {
+        return false;
+    }
+
+    if (filter.startTime) {
+        isValid = validateDateTime(filter.startTime)
+    }
+
+    if (filter.endTime) {
+        isValid = validateDateTime(filter.endTime)
+    }
+
+    return isValid;
+}
+
+export const validateDateTime = (time: string): time is string => {
+    try {
+        return moment(time, true).isValid();
+
+    } catch (error) {
+        return false;
+    }
 }
