# src/routes/index.ts
@@ -5,7 +5,7 @@ import { routes } from './definition';
 import { errorCodes } from '../error-codes';
 import auth from './auth';
 import home from './home';
-import { checkAuthToken } from '../middleware';
+import { checkAuthToken, showTheRoute } from '../middleware';
 
 const router = Router();
 
@@ -17,7 +17,10 @@ serverHelper.initializeSwaggerModule(
     }
 )
 // Chech authorization
+router.use(routes.home.root, showTheRoute)
+
 router.use(routes.home.root, checkAuthToken);
+
 // Health check
 router.get(routes.root, (req, res) => res.send(errorCodes.Success));
 //Auth
@@ -27,6 +30,7 @@ router.post(routes.auth.login, auth.login);
 //Home
 
 router.get(routes.home.getProfile, home.getProfile);
+router.post(routes.home.showEvents, home.showEvents)
 
 export {
     router
